src/Base/main/default/objects/Ecwid_Field_Mapping__mdt/Ecwid_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Ecwid Field Mapping</label>
    <pluralLabel>Ecwid Field Mapping</pluralLabel>
</CustomObject>