src/Base/main/default/objects/Ecwid_Field_Mapping__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>