src/Base/main/default/objects/Ecwid_Field_Mapping__mdt/fields/Ecwid_Dynamic_Queries__c.field-meta.xml
<CustomField>
    <fullName>Ecwid_Dynamic_Queries__c</fullName>
    <label>Ecwid Dynamic Queries</label>
    <referenceTo>Ecwid_Object_Mapping__mdt</referenceTo>
    <relationshipLabel>Ecwid Field Mapping</relationshipLabel>
    <relationshipName>Ecwid_Field_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>