src/Base/main/default/objects/Ecwid_Field_Mapping__mdt/fields/JSON_Field__c.field-meta.xml
<CustomField>
    <fullName>JSON_Field__c</fullName>
    <label>JSON Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>