src/Base/main/default/objects/Ecwid_Field_Mapping__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field to use from Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>